# mobi

./: pyproject.toml
backend/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
backend/app_basket/: admin.py  apps.py  basket.py  models.py  serializers.py  views.py
backend/app_basket/migrations/: 0001_initial.py  0002_initial.py  0002_remove_order_creation_date_and_time_and_more.py  0003_basket_total_cost_pos_alter_basket_products.py  0003_order_order_product_list.py  0004_order_creation_date_and_time_order_promo_and_more.py  0004_remove_basket_total_cost_pos.py  0005_order_completed_alter_order_order_product_list.py  0005_remove_basket_phone_number_basket_user_session.py  0006_alter_basket_user_session.py  0007_alter_basket_options_alter_basket_user_session.py  0008_alter_basket_user_session.py  0009_basket_app_basket_basket_user_session_products.py  0010_remove_basket_app_basket_basket_user_session_products_and_more.py  0011_alter_basket_user_session.py  0012_remove_basket_name____and_more.py  0017_order.py  (+5 more)
backend/app_category/: admin.py  apps.py  models.py  views.py
backend/app_color/: admin.py  apps.py  models.py  serializers.py  views.py
backend/app_products/: admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
backend/app_promo/: admin.py  apps.py  models.py  serializers.py  views.py
backend/app_reviews/: admin.py  apps.py  models.py  serializers.py  views.py
backend/app_tags/: admin.py  apps.py  models.py  serializers.py  views.py
backend/core/: celery.py  router.py  settings.py  urls.py
backend/nginx/: nginx.conf
(+74 files in other folders)
