[tool.poetry]
name = "mobi"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.0"
pillow = "^10.1.0"
django-fieldsets-with-inlines = "^0.6"
celery = "^5.3.4"
django-celery-beat = "^2.5.0"
redis = "^5.0.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
